--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -40,7 +40,7 @@
 
 <div class="row">
   <div class="small-12 columns">
-    <%= form_for :user, url: users_path do |f| %>
+    <%= form_for :user, url: '/user_search' do |f| %>
       <%= f.text_field :user_input, placeholder: "Where do you want to pee?" %>
 
       <%= f.submit "Search", class: "primary button" %>
