--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -18,6 +18,7 @@
   <script>
   function initMap() {
     var mapDiv = document.getElementById('google-map');
+      debugger
     var map = new google.maps.Map(mapDiv, {
           center: {lat: 40.7831, lng: -73.9712},
           zoom: 14
