--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -4,7 +4,6 @@
     navigator.geolocation.getCurrentPosition(function(p){
       currentLatitude = p.coords.latitude;
       currentLongitude = p.coords.longitude;
-      // debugger
     });
 </script>
 
@@ -18,9 +17,8 @@
   <script>
   function initMap() {
     var mapDiv = document.getElementById('google-map');
-      debugger
     var map = new google.maps.Map(mapDiv, {
-          center: {lat: 40.7831, lng: -73.9712},
+          center: {lat: <%= @search_location[0] %>, lng: <%= @search_location[1] %>},
           zoom: 14
         });
     var icon = "<%= asset_path 'poo.png' %>"
