--- a/toilet_pal/app/views/layouts/application.html.erb
+++ b/toilet_pal/app/views/layouts/application.html.erb
@@ -19,6 +19,11 @@
   </div>
   <div class="top-bar-right">
     <ul class="menu button-group" id='nav-bar' data-responsive-menu="drilldown medium-dropdown">
+      <% if logged_in? && current_user.admin? %>
+        <li class='button'>
+          <%= link_to 'Admin', users_path %>
+        </li>
+      <% end %>
       <li class='button'>
         <%= link_to 'Home', root_path %>
       </li>
