--- a/toilet_pal/app/views/toilets/index.html.erb
+++ b/toilet_pal/app/views/toilets/index.html.erb
@@ -7,7 +7,7 @@
     });
 </script>
 
-<h1 id="homepage-header"> Helping you take the browns to the superbowl since 1999</h1>
+<h1 id="homepage-header"> Making sure your Browns get to the SuperBowl</h1>
 
 <div id="toilets-index-table" class="row">
 
