--- a/toilet_pal/app/assets/stylesheets/toilets.css
+++ b/toilet_pal/app/assets/stylesheets/toilets.css
@@ -82,6 +82,7 @@
 .toilet-block {
   display:block;
   float:left;
-  border: black 2px solid;
-  background-color: grey;
+  margin: 10px;
+  padding: 10px;
+  background-color: #C2DAE8;
 }
