--- a/toilet_pal/app/views/users/show.html.erb
+++ b/toilet_pal/app/views/users/show.html.erb
@@ -41,7 +41,7 @@
       <h4><%= @user.username.capitalize %>'s Reviews:</h4>
       <ul>
         <% @user.reviews.each do |review| %>
-          <li class='ind-review'>Review: <%= link_to "#{review.toilet.name}", toilet_path(review.toilet) %></li>
+          <li class='ind-review'>Toilet: <%= link_to "#{review.toilet.name}", toilet_path(review.toilet) %></li>
           <li>Rating: <%= review.rating %></li>
           <li>Date: <%= review.created_at.strftime("%B %d, %Y") %></li>
           <li><%= review.review_text %></li>
