--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
       <%= gravatar_for user %>
       <%= link_to user.username, user %>
       <% if logged_in? && current_user.admin? %>
-    | <%= link_to "delete", user, method: :delete,
+      <%= link_to "delete", user, method: :delete,
                                   data: { confirm: "You sure?" } %>
       <% end %>
     </li>
