--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
     <div class="top-bar" id="main-menu">
       <div class="top-bar-title">
         <ul class="dropdown menu" data-dropdown-menu>
-          <li id="logo-image" class="menu-text"><%= image_tag "need-to-pee-white.png", size: "70"%></li>
+          <li id="logo-image" class="menu-text">
+            <%= link_to image_tag("need-to-pee-white.png", size: "70"), root_path %>
+          </li>
         </ul>
       </div>
       <div class="top-bar-right">
