--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -3,6 +3,7 @@
 @import 'settings';
 @import 'header_footer';
 @import 'foundation-icons';
+@import 'font-awesome';
 @import 'homepage';
 @import 'toilets';
 @import 'users';
