--- a/app/views/toilets/index.html.erb
+++ b/app/views/toilets/index.html.erb
@@ -44,41 +44,26 @@
         });
     var icon = "<%= asset_path 'toilet-icon.png' %>"
     $.getJSON("/toilet_data").done(function(toilets) {
+      console.log(toilets[0])
+      for(var i=0; i < toilets.length; i++){
+        var contentString =
+        '<h1 id="firstHeading" class="firstHeading">'+toilets[i].name+'</h1>'+
+        '<div id="bodyContent"><p>'+ toilets[i].location +'</p>'+
+        '<p><a class="button"><i class="fi-magnifying-glass"></i> Details </a> <a class="button"><i class="fi-pencil"></i> Review </a> <a class="button"><i class="fi-map"></i> Directions </a></p>'+
+        '</div>';
 
-      for(var i=0; i < 850; i++){
-    var contentString = '<div id="content">'+
-      '<div id="siteNotice">'+
-      '</div>'+
-      '<h1 id="firstHeading" class="firstHeading">Uluru</h1>'+
-      '<div id="bodyContent">'+
-      '<p><b>Toilet</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-      'sandstone rock formation in the southern part of the '+
-      'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) '+
-      'south west of the nearest large town, Alice Springs; 450&#160;km '+
-      '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major '+
-      'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-      'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-      'Aboriginal people of the area. It has many springs, waterholes, '+
-      'rock caves and ancient paintings. Uluru is listed as a World '+
-      'Heritage Site.</p>'+
-      '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
-      'https://en.wikipedia.org/w/index.php?title=Uluru</a> '+
-      '(last visited June 22, 2009).</p>'+
-      '</div>'+
-      '</div>';
+      var infowindow = new google.maps.InfoWindow({content: contentString});
 
-    var infowindow = new google.maps.InfoWindow({content: contentString});
-
-    var marker = new google.maps.Marker({
-          position: {lat: (toilets[i].latitude - 0), lng: (toilets[i].longitude - 0)},
-          map: map,
-          icon: icon,
-          title: toilets[i].name
+      var marker = new google.maps.Marker({
+            position: {lat: (toilets[i].latitude - 0), lng: (toilets[i].longitude - 0)},
+            map: map,
+            icon: icon,
+            title: toilets[i].name
+            });
+      marker.addListener('click', function() {infowindow.open(map, marker);
           });
-    marker.addListener('click', function() {infowindow.open(map, marker);
-        });
-        }
-    })
+          }
+      })
   }
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"async defer></script>
